--- a/doc/7.6.Spin_Locks.md
+++ b/doc/7.6.Spin_Locks.md
@@ -1,4 +1,4 @@
-# 7.6 Spin Locks
+# 7.6 Interlude — Spin Locks
 
 As we're done for now with memory management, and before jumping into
 processes, let's make a quick detour into concurrency and locks.
