--- a/doc/8.3.Process_Scheduling.md
+++ b/doc/8.3.Process_Scheduling.md
@@ -1,55 +1,122 @@
 # 8.3 Process Scheduling
 
-[WIP]
+**Note**: this iteration is captured in the git tag `scheduler`.
 
-## User mode execution
+Our goal for this chapter is to create the scheduler that will run the init
+process we created in the [8.1 Process Creation](doc/8.1.Process_Creation.md)
+chapter. We'll still execute in kernel mode and will look into user mode in the
+next chapter.
 
-FIXME elucidate if/how a process runs alternatively in kernel and user mode.
+## Context switching
+
+The crux of switching from one thread to another is to replace CPU registers at
+the same time, especially ESP and EIP[^mittos64].
+
+Well we only need to replace *some* registers since, according to the calling
+convention of [System V ABI](https://wiki.osdev.org/System_V_ABI), when calling
+a function, only a few registers are guaranteed to be preserved: edi, esi, ebx,
+ebp. eax, ecx, edx are considered scratch registers and are managed by
+caller. This is why `struct context` only contains these, plus eip.
+
+So how do we switch registers? Let's step into the `swtch()` assembly function:
+`void swtch(struct context **old, struct context *new);`. It
+
+- pushes registers,
+- saves the stack pointer (which points to the current stack) to `old`,
+- updates esp with the `new` one (which points at the new process's stack)
+- pops registers
+
+It's important to note how execution will be altered, i.e. how eip will be
+updated. Remember from the *cdecl* calling convention:
+
+1. caller pushes arguments in reverse order onto stack;
+   caller pops arguments after return
+2. `call` pushes EIP onto the stack and `jmp`'s;
+   `ret`  pops saved EIP to EIP
+
+So when entering `swtch()`, eip will be pushed to the stack. So, after we push
+the registers, the top of the stack will effectively constitute a `struct
+context` structure!
+
+```C
+struct context {
+    uint32_t edi;
+    uint32_t esi;
+    uint32_t ebx;
+    uint32_t ebp;
+    uint32_t eip;
+} __attribute__((packed));
+```
+
+Inspecting the stack right after entering `swtch(&(c->scheduler), p->context)`:
+
+```
+0x801093dc: 0x8010178b saved eip (implicitly from `call <swtch>`)
+0x801093e0: 0x80109464 old / &(c->scheduler)
+0x801093e4: 0x87fdffec new / p->context
+```
+
+Then, right before the switch, having pushed registers:
+
+```
+0x801093cc:     0x801093e4      0x87fe0000      0x87fdffec      0x80109428
+0x801093dc:     0x8010178b      0x80109464      0x87fdffec      0x80109428
+```
+
+Nothing spectacular. Then we save the current esp (0x801093cc) to old, and
+switch, setting the new stack pointer.
+
+But what's already on the new stack (0x87fdffec)? Well the new context,
+`p->context`, which is all 0, including eip:
+
+```
+0x87fdffec:     0x00000000      0x00000000      0x00000000      0x00000000
+0x87fdfffc:     0x00000000      0x53434146      0x00000040      0x00000000
+```
+
+Interestingly, the page for the new process stack is right at the end of the
+kernel heap, that is just before the ACPI I/O space. Here we can recognize the
+string "FACS" (Firmware ACPI Control Structure) beginning at 0x7fe0000 🙂
+
+So after we update esp to point to the new process stack, we effectively point
+to a `struct context` structure, of which eip is the last field.  Note eip
+hasn't changed yet! We're still in `<swtch+16>`. Only when we have popped
+registers *from the new stack* will `ret` use the new eip and jump to 0x0
+(virtual address of `initcode`).
 
 
-Note, to [enter User Mode](https://littleosbook.github.io/#entering-user-mode)
-`iret` must be used anyways:
+One question we can already ask ourselves is: how do we switch back? And how do
+we switch back to our previous (scheduler) stack? FIXME Let's keep the question
+for later.
 
-> The only way to execute code with a lower privilege level than the current
-> privilege level (CPL) is to execute an `iret` or `lret` instruction -
-> interrupt return or long return, respectively. [^littleosbook]
+## Switching to user memory
 
+Before switching contexts we need to switch to the process address space (page
+directory) which we prepared earlier when creating the process: update CR3 with
+the process page directory.
 
-### Process stacks
-
-> Each process has two stacks: a user stack and a kernel stack
-> (p->kstack). When the process is executing user instructions, only its user
-> stack is in use, and its kernel stack is empty. When the process enters the
-> kernel (for a system call or interrupt), the kernel code executes on the
-> process’s kernel stack; while a process is in the kernel, its user stack
-> still contains saved data, but isn’t actively used. A process’s thread
-> alternates between actively using its user stack and its kernel stack. The
-> kernel stack is separate (and protected from user code) so that the kernel
-> can execute even if a process has wrecked its user stack. [^xv6-book]
-
-FIXME where is the xv6 user stack defined? A: at the end of the process user
-space as part of the *trap frame* `p->tf->esp = PGSIZE;`? So why does Hux
-processes [effectively use 3
-stacks](https://github.com/josehu07/hux-kernel/wiki/14.-User-Mode-Execution#a-quick-recap-of-system-state):
-process kernel stack (`p->kstack`), process user stack (`p->stack_low`) and
-kernel stack for the process (???).
-
-
-I.e. for each process, [2 stacks](https://stackoverflow.com/a/64922355/421846)
-effectively co-exist: the one used by the user-level program, the one used by
-the kernel for the user-level process.
-
+Lastly, in `initproc_init()`, we set `p->context->eip = 0`, since `initcode`'s
+code will reside at virtual address 0x0.
 
 ## Scheduler
 
-FIXME maybe another chapter?
+We now have everything we need to implement a basic scheduler: a round-robin
+infinite loop that will basically:
+
+- scan the process table for a `READY` process
+- switch to the new process address space (update page directory)
+- switch to the new process context (update stack pointer and the program
+  counter)
+
+When we run our OS at this point, there's only one `READY` process
+(`initcode`), which the scheduler picks up and runs, successfully printing an
+"H" on the the second to last VGA line. We only need to be remember to use
+virtual addresses in `initcode.asm`.
+
+We ran our first process! That's pretty amazing \\o/ But we're not quite
+finished yet. We need to get to userspace, which we'll do in the next chapter.
+
 
 ## References
 
-- [^xv6-annotated]: [xv6-annotated](https://github.com/palladian1/xv6-annotated/blob/main/spin_locks.md)
-- [^OSTEP-locks]: [OSTEP-locks](https://pages.cs.wisc.edu/~remzi/OSTEP/threads-locks.pdf)
-- [^xv6-book]: [xv6-book](https://pdos.csail.mit.edu/6.828/2018/xv6/book-rev11.pdf)
-- [^littleosbook]: [littleosbook](https://littleosbook.github.io/)
-- [^hux-process]: [hux-process](https://github.com/josehu07/hux-kernel.wiki/blob/b0a30aca0cd301e86ed8d52c498d9294fa1c892c/13.-Abstraction-of-Process.md)
-- [^hux-usermode]: [hux-usermode](https://github.com/josehu07/hux-kernel.wiki/blob/b0a30aca0cd301e86ed8d52c498d9294fa1c892c/14.-User-Mode-Execution.md)
-- [^tehybel-osdev]: [tehybel-osdev](https://github.com/tehybel/osdev/)
+- [^mittos64]: [mittos64](https://github.com/thomasloven/mittos64/blob/8fac92474adb88a1deca15a34b68b12658dfd5ce/doc/10_Threading.md)
