User mode execution

--- a/doc/7.5.Higher_Half_Kernel.md
+++ b/doc/7.5.Higher_Half_Kernel.md
@@ -336,4 +336,4 @@ regions). A break point has to be set inside the code with:
 - [^osdev-triplefault]: see https://wiki.osdev.org/Exceptions#Page_Fault,
   https://wiki.osdev.org/Triple_Fault,
   https://wiki.osdev.org/Paging#Page_Faults
-- [^dreamos82]: [dreamos82](https://github.com/dreamos82/Osdev-Notes/blob/4df659bb8a6680b9d93b11d06d7d5ea4a567e8ec/HigherHalf.md)
+- [^osdev-notes]: [osdev-notes](https://github.com/dreamos82/Osdev-Notes/blob/4df659bb8a6680b9d93b11d06d7d5ea4a567e8ec/HigherHalf.md)
