--- a/doc/8.1.Process_Creation.md
+++ b/doc/8.1.Process_Creation.md
@@ -272,13 +272,13 @@ here is: what exactly do we want to free here? Well the allocated frames. But
 what frames were allocated exactly? Let's count allocated frames in
 `initproc_init()` and where they're referenced:
 
-| Call                        | Purpose              | Nb     | Reference                          |
-|-----------------------------|----------------------|--------|------------------------------------|
-| `process_alloc()`           | process kernel stack | 1      | `p->kstack`                        |
-| `setupkvm()`                | page directory       | 1      | `p->pgdir`                         |
-| `setupkvm()`                | page tables          | *some* | process pgdir                      |
-| `inituvm()`                 | user process code    | 1      | *physical address for virtual 0x0* |
-| `mappages()` in `inituvm()` | page table           | 1      | process pgdir                      |
+| Call                        | Purpose                     | Nb     | Reference                          |
+|-----------------------------|-----------------------------|--------|------------------------------------|
+| `process_alloc()`           | process kernel stack        | 1      | `p->kstack`                        |
+| `setupkvm()`                | page directory              | 1      | `p->pgdir`                         |
+| `setupkvm()`                | page tables                 | *some* | process pgdir                      |
+| `inituvm()`                 | process user code and stack | 1      | *physical address for virtual 0x0* |
+| `mappages()` in `inituvm()` | page table                  | 1      | process pgdir                      |
 
 As we see by enurating allocations, the alternate approach of recursively
 freeing page directory entries (iterate over PDEs, iterate over PTEs, free
