--- a/doc/8.Processes.md
+++ b/doc/8.Processes.md
@@ -46,7 +46,7 @@ The short answer is: in x86 (protected mode), TSS serves *hardware task
 switching*; but most OSes moved to *software task switching*.
 
 > Since [hardware task switching] proved to be slower than *software task
-> switching*, this functionality was removed in long-mode. [^dreamos-int]
+> switching*, this functionality was removed in long-mode. [^osdev-notes-int]
 
 Nevertheless TSS must be set up for user mode execution:
 
@@ -67,4 +67,4 @@ Nevertheless TSS must be set up for user mode execution:
 - [^hux-processes]: [hux-processes](https://github.com/josehu07/hux-kernel.wiki/blob/b0a30aca0cd301e86ed8d52c498d9294fa1c892c/14.-User-Mode-Execution.md)
 - [^tehybel-osdev]: [tehybel-osdev](https://github.com/tehybel/osdev/)
 - [^osdev-tss]: [osdev-tss](https://wiki.osdev.org/Task_State_Segment)
-- [^dreamos-int]: [^dreamos-int](https://github.com/dreamos82/Osdev-Notes/blob/4df659bb8a6680b9d93b11d06d7d5ea4a567e8ec/05_Userspace/03_Handling_Interrupts.md?plain=1#L12)
+- [^osdev-notes-int]: [^osdev-notes-int](https://github.com/dreamos82/Osdev-Notes/blob/4df659bb8a6680b9d93b11d06d7d5ea4a567e8ec/05_Userspace/03_Handling_Interrupts.md?plain=1#L12)
