Pass arguments to syscalls

--- a/doc/8.4.User_Mode_Execution.md
+++ b/doc/8.4.User_Mode_Execution.md
@@ -226,6 +226,10 @@ software interrupt is:
 > * IOPB may get the value sizeof(TSS) (which is 104) if you don't plan to use this io-bitmap further
 > [osdev-tss](https://wiki.osdev.org/Task_State_Segment#TSS_in_software_multitasking)
 
+This happens immediately! That is right after `INT`, thus before the handler is
+executed. Otherwise the handler could not execute in kernel mode. `isr_wrapper`
+thus saves the context to the stack pointed by esp0: the process kernel stack.
+
 Why the shift in `SEG_KDATA << 3` in the ss0 assignment again? Remember the
 format of descriptors, aka *selectors* in segmentation: the index in the GDT is
 in bits 15-3. So if we want index 2, we actually need 2<<3 (0x10) in the
