System calls and user-space programs

--- a/doc/8.1.Process_Creation.md
+++ b/doc/8.1.Process_Creation.md
@@ -284,7 +284,7 @@ As we see by enurating allocations, the alternate approach of recursively
 freeing page directory entries (iterate over PDEs, iterate over PTEs, free
 pages at all levels) doesn't work. For one, not all physical addresses point to
 allocated frames (ex: kernel code). So how do we tell which physical addresses
-are user pages? Xv6 approach is thus to start with user pages (`deallocuvm()`),
+are user pages? Xv6's approach is to start with user pages (`deallocuvm()`),
 iterating over the process virtual address range [0, KERNBASE) and uses
 `walkpgdir()` to find the addresses of related (allocated) pages.
 
