--- a/doc/8.4.User_Mode_Execution.md
+++ b/doc/8.4.User_Mode_Execution.md
@@ -5,16 +5,17 @@
 We're able to create and run processes in kernel mode. But we ultimately want
 to be able to switch back and forth between kernel and user mode execution, aka
 *crossing the protection boundary*. Why? Well because it's a standard feature
-of modern OSes 😀, but mainly because we want to protect our kernel from user
-processes, and user processes from each other: restrict available instructions
-and memory access.
+of modern OSes 😀. More seriously because we want to protect our kernel from
+user processes, and user processes from each other: restrict available
+instructions and memory access.
 
-We're not going to dive into [security features offered by the
+We're not going to dive into all [security features offered by the
 CPU](https://wiki.osdev.org/Security#Low-level_Protection_Mechanisms). We
 already saw paging for memory access. It's enough to mention *protection
 rings*: processes can run in different rings (0-3), allowing different levels
 of resource access. Ring-0 is meant for kernel, ring-1 and 2 for device
-drivers, ring-3 for applications. OSes usually only use ring 0 and 3.
+drivers, ring-3 for applications. In practice OSes usually only use ring 0 and
+3.
 
 There are 2 parts to the challenge of implementing ring switching:
 
@@ -37,10 +38,10 @@ This is the tricky part. So, in order to reach ring-3, we want to switch to a
 new process, making the CPU believe it was already in ring-3, using an
 interrupt. How does that work?
 
-> The trick we will use here is to "fake" an interrupt state on the process
-> kernel stack, set the state's segments information with `DPL_USER` flag
-> (*ring-3* user privilege), and make the process do a *return-from-trap* ✭.
-> [^hux-usermode]
+> The trick we will use here is to "fake" [forge] an interrupt state on the
+> process kernel stack, set the state's segments information with `DPL_USER`
+> flag (*ring-3* user privilege), and make the process do a *return-from-trap*
+> ✭.  [^hux-usermode]
 
 Right, so what that means is engineering the new process's stack to return
 multiple times, once via `iret`. That is as if we'd return from an
@@ -55,8 +56,8 @@ Here are all the ingredients:
     - eflags with IF (interrupt enable)
     - eip to 0x0 (beginning of `initproc`)
   - a return address to `trapret`
-  - a context (`struct context`) with eip pointing to `process_entry()` (xv6's
-    `forkret()`)
+  - a context (`struct context`) with eip pointing to `process_entry()`
+    (`forkret()` in xv6, renamed `enter_process()` in later chapters)
 - an assembly function `trapret` basically pops the trap frame and returns with
   `iret`. It's actually the last part of the existing `isr_wrapper` (xv6's
   `alltraps`).
@@ -146,10 +147,11 @@ after its completion. And indeed linux-0.1, 386BSD or SOS don't disable
 interrupts.
 
 Now, having implemented the corresponding machinery to get from ring-0 to
-ring-3 — yet again mostly following xv6, our `initcode` program fails with page
-fault. That's because, now it's started in user mode, it can't actually do
-much: no interrupts (say to print something), no access to VGA memory (page
-fault), no I/O to output to the serial port.
+ring-3 — yet again having mostly copied xv6, our `initcode` program (which
+attempts to print to the screen) fails with page fault. That's expected: now
+that it's started in user mode, it can't actually do much: no interrupts (say
+to print something), no access to VGA memory (page fault), no I/O to output to
+the serial port.
 
 If we want to test and see the result of our work, apart from using a debugger,
 we have to implement the return to ring-0 so `initcode` can make a system call
@@ -174,8 +176,8 @@ So, to iterate, the way system calls work is:
 
 - the user program issues a software interrupt (trap); it's pre-defined by the
   OS (0x40 / 64 in our case, 0x80 in Linux);
-- because of the software interrupt, the CPU then restores the ring-0 stack from
-  the TSS (SS and ESP from SS0 and ESP0). Note that in segmentation, the SS
+- because of the software interrupt, the CPU then restores the ring-0 stack
+  from the TSS (SS0 to SS and ESP0 to ESP). Note that in segmentation, the SS
   (*Stack Segment register*) stores the segment applied on ESP, so the stack
   pointer actually reads "SS:ESP". We set SS0 to the kernel data segment (index
   2) and ESP0 to the end of the process kernel stack.
@@ -226,9 +228,10 @@ software interrupt is:
 > * IOPB may get the value sizeof(TSS) (which is 104) if you don't plan to use this io-bitmap further
 > [osdev-tss](https://wiki.osdev.org/Task_State_Segment#TSS_in_software_multitasking)
 
-This happens immediately! That is right after `INT`, thus before the handler is
-executed. Otherwise the handler could not execute in kernel mode. `isr_wrapper`
-thus saves the context to the stack pointed by esp0: the process kernel stack.
+This happens immediately! That is right after `INT`, and thus before the
+handler is executed. Otherwise the handler could not execute in kernel
+mode. `isr_wrapper` thus saves the context to the stack pointed by esp0: the
+process kernel stack.
 
 Why the shift in `SEG_KDATA << 3` in the ss0 assignment again? Remember the
 format of descriptors, aka *selectors* in segmentation: the index in the GDT is
@@ -243,7 +246,7 @@ descriptor.
 > [osdev-ring3](https://wiki.osdev.org/Getting_to_Ring_3#The_TSS)
 
 Fun fact: the *80386 Programmer's Reference Manual* Intel Corp., 1986, ISBN
-1-55512-022-9, shows a wrong format:
+1-55512-022-9, shows a wrong format (RPL should be bits 1-0):
 
 ```
 Figure 5-6. Format of a Selector
